My Favorite Artist?
Second Commit

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ all sort of stories rather it's true or not. Because art is a big topic, and inc
 
   <h3>Poem</h3>
 
-  <p><b>Art and Books</b></p>
+  <p><b><i>Art and Books</i></b></p>
   <pre>
 Without a doubt,
         I must read
@@ -85,7 +85,7 @@ See the artworks
 
   </pre>
 
-  <h3>Tables of Arts</h3>
+  <h3>Artist In Different Field</h3>
 
     <table style="width:55%">
     <ol>
@@ -107,11 +107,11 @@ See the artworks
         <td>Yoko Ono, John Dahlsen, etc.</td>
       </tr> <tr>
         <td>Decorative Arts</td>
-        <td>René Lalique, Charles-Édouard Jeanneret-Gris, Émile-Jacques Ruhlmann, etc</td>
+        <td>René Lalique, Charles-Édouard Jeanneret-Gris, Émile-Jacques Ruhlmann, etc.</td>
     </tr>
     <tr>
       <td>Performance Arts</td>
-      <td>Jackie Chan, Simon Cowell, Bruno Mars, etc.</td>
+      <td>Jackie Chan, Simon Cowell, Bruno Mars, Donnie Yen, Ellen DeGeneres, Bruce Lee, etc.</td>
     </tr>
 
    </table>
