--- a/index.html
+++ b/index.html
@@ -4,13 +4,76 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>My Favorite Artist?</title>
-</head>
+<link href="https://fonts.googleapis.com/css?family=Arima+Madurai|Economica|Nanum+Myeongjo|Neucha|Shadows+Into+Light+Two" rel="stylesheet">
+  <style>
 
-<!--body style="background-color: #f7f7f9;"-->
+    body{
+      background-color: #4C5056;
+    }
 
-<body style="background-color: gray">
+    h1 {
+      color: #BDC5D5;
+    }
+
+    h2 {
+      color: #BDC5D5;
+      font-size: 25px;
+    }
+
+    h3 {
+      color: #BDC5D5;
+      font-size: 25px;
+      font-family: Economica;
+    }
+
+    h5 {
+      color: #9BA2AF;
+    }
+
+    table {
+       width:60% ;
+       font-family: Economica;
+    }
+
+
+    #poem {
+    color:#9BA2AF;
+    }
+
+    #quote{
+      color: #9BA2AF;
+      font-family: 'Economica', sans-serif;
+      font-size: 18px;
+    }
+
+    #table{
+      color: #9BA2AF;
+      font-family: 'Arima Madurai', cursive;
+    }
+
+    #list {
+      color: #9BA2AF;
+      font-family: 'Neucha', cursive;
+    }
+
+    p {
+     color: #9BA2AF;
+     font-family: 'Neucha', cursive;
+    }
+
+    pre{
+    font-family: 'Shadows Into Light Two', cursive;
+Times New Roman;
+     color: #9BA2AF;
+    }
+
+
+  </style>
+
+  </head>
+
     <center>
-      <h1 style="color:;">Favorite Artist</h1>
+      <h1>Favorite Artist</h1>
       <hr>
       <img src="http://cdn.playbuzz.com/cdn/8c965b3e-e4fd-4ad0-b91e-0c9a49da1be1/ad0fabd7-6600-4879-a5a3-9429b279bdea.jpg" width="45%">
       <h5>Painted by Salvador Dali</h5>
@@ -20,7 +83,7 @@
   <p>The word <b>'Artist'</b> is used when one talks about arts, and arts contains various types of skills, creations, and beauty. Arts includes:</p>
 
 
-  <ol>
+  <ol id="list">
   <li>Fine Arts</li>
     <ul>
       <li>Painting</li>
@@ -54,23 +117,26 @@
   <h2>My favorite Artist?</h2>
 
   <p>
-  <pre style="font-family:Times New Roman;">I'll have to say I <b>do not</b> have a favorite artist. I found art interesting, and I love various type of arts.
+  <pre>I'll have to say I <b>do not</b> have a favorite artist. I found art interesting, and I love various type of arts.
 Maybe the reason that I can't nor have a favorite artist got something to do with the fact that I'm open and accepted
 all sort of stories rather it's true or not. Because art is a big topic, and include various kinds, I can't pick just one.</pre>
   </p>
 
- <h2>Others</h2>
+<h2>Others</h2>
 
   <h3>Quote</h3>
-   <p>A quote that related to me:</p>
+
+<div id="quote">
 
   <q>Don't be ashamed of your story. It will inspire others.</q>
   <blockquote> - Unknown</blockquote>
 
+</div>
 
+<div id="poem">
   <h3>Poem</h3>
 
-  <p><b><i>Art and Books</i></b></p>
+  <p>Art and Books</p>
   <pre>
 Without a doubt,
         I must read
@@ -85,9 +151,11 @@ See the artworks
 
   </pre>
 
+</div>
+
   <h3>Artist In Different Field</h3>
 
-    <table style="width:55%">
+    <table id="table">
     <ol>
       <tr>
         <th><h3>Types of Arts</h3></th>
