--- a/index.html
+++ b/index.html
@@ -9,25 +9,32 @@
 
     body{
       background-color: #4C5056;
+      font-weight: bold;
     }
 
     h1 {
       color: #BDC5D5;
+      font-weight: bold;
+      margin: 25px;
     }
 
     h2 {
       color: #BDC5D5;
       font-size: 25px;
+      font-weight: bold;
     }
 
     h3 {
       color: #BDC5D5;
       font-size: 25px;
       font-family: Economica;
+      font-weight: bold;
     }
 
     h5 {
       color: #9BA2AF;
+      font-weight: bold;
+
     }
 
     table {
@@ -36,7 +43,7 @@
     }
 
 
-    #poem {
+    .artandbookpoem {
     color:#9BA2AF;
     }
 
@@ -63,28 +70,32 @@
 
     pre{
     font-family: 'Shadows Into Light Two', cursive;
-Times New Roman;
+     line-height: 2;
      color: #9BA2AF;
     }
 
+
+    hr {
+
+      width: 75em;
+    }
 
   </style>
 
   </head>
 
-    <center>
+<center>
       <h1>Favorite Artist</h1>
       <hr>
       <img src="http://cdn.playbuzz.com/cdn/8c965b3e-e4fd-4ad0-b91e-0c9a49da1be1/ad0fabd7-6600-4879-a5a3-9429b279bdea.jpg" width="45%">
       <h5>Painted by Salvador Dali</h5>
-  </center>
-
+</center>
   <h1>Type of <i>Arts</i></h1>
   <p>The word <b>'Artist'</b> is used when one talks about arts, and arts contains various types of skills, creations, and beauty. Arts includes:</p>
 
 
   <ol id="list">
-  <li>Fine Arts</li>
+    <li>Fine Arts</li>
     <ul>
       <li>Painting</li>
       <li>Drawing</li>
@@ -117,7 +128,7 @@ Times New Roman;
   <h2>My favorite Artist?</h2>
 
   <p>
-  <pre>I'll have to say I <b>do not</b> have a favorite artist. I found art interesting, and I love various type of arts.
+  <pre>I'll have to say I <strong><i>do not</i></strong> have a favorite artist. I found art interesting, and I love various type of arts.
 Maybe the reason that I can't nor have a favorite artist got something to do with the fact that I'm open and accepted
 all sort of stories rather it's true or not. Because art is a big topic, and include various kinds, I can't pick just one.</pre>
   </p>
@@ -133,7 +144,7 @@ all sort of stories rather it's true or not. Because art is a big topic, and inc
 
 </div>
 
-<div id="poem">
+<div class="artandbookpoem">
   <h3>Poem</h3>
 
   <p>Art and Books</p>
